Fix: Fix gcode can not export in workspace
Fix: Process model after flip

Fix: Context menu cause toolpath unselect

Fix: Cut last model should delete related toolpath

Fix: Prevent vertical scrollbar shown in global

Fix: Move support compute parent model boundingbox

--- a/src/app/ui/layouts/styles/appbar.styl
+++ b/src/app/ui/layouts/styles/appbar.styl
@@ -1,6 +1,6 @@
 [class~='appbar'] {
     .app-content {
-        margin-top: 24px;
+        padding-top: 24px;
     }    
 }
 .app-content {
